addons/care_config_relaunch_v2/static/src/css/care_relaunch_v2.css
/* ... */
div.oe_product_cart {
    background-color: #EEE9E5;
    border-radius: 10px;
    padding: 2rem;
}

div#products_grid_before {
    display: none;
}

div#products_grid {
    width: 100%;
}

#products_grid > table > tbody > tr > td > div > form > div > div.wrap_wsd_1 > div.wrap_wsd_2.front > div > a > img {
    width: 100%;
    max-width: 100%;
    height: auto !important;
}

/* PRODUCT CARDS AND GRID END */

/* FORM REDESIGN START */

/* Hide product image and header */
#website_sale_donate img.product-image,
#website_sale_donate h1 {
    display: none;
}

/* Reorder elements */

div.js_product {
    display: grid;
}

h3.amount_title {
    order: -2;
}

div.js_product h4#payment_intervals {
    order: -1;
    padding: 0 !important;
}

div.js_product div.text-left {
    display: grid;
}

div.wsd_opc_payment {
    order: -1;
}

/* Fix headline spacing and indentation */

h3.amount_title,
h3.checkout_title,
h3.payment_title {
    margin-bottom: 0 !important;
    margin-left: 0 !important;
    padding-left: 0;
}

/* Counter graphics */
body {
  counter-reset: section;
  counter-increment: section; /* start counter at 2, the parent website renders the first */
}

#website_sale_donate h3 {
    font-weight: bold;
    font-size: 18px;
    color: black;
    background: transparent;
}

#website_sale_donate h3:before {
    counter-increment: section;
    /* content: counter(section); do not use real counter, due to CSS order, it's counted wrong */
    margin-right: 1rem;
    background-color: #E36F1E;
    color: white;
    display: inline-block;
    text-align: center;
    line-height: 28px;
    border-radius: 14px;
    width: 28px;
    height: 28px;
    font-size: 14px;
}

h3.amount_title:before { content: "2"; }
h3.payment_title:before { content: "3"; }
h3.checkout_title:before { content: "4"; }

/* Suggested price boxes - OPC forms */

.arbitrary_price.form-inline {
    font-size: 0;
}

span.price_donate_suggested_outer {
    display: inline-block;
    margin: 0 !important;
    padding: 0 !important;
    width: 50%;
    background-color: transparent;
}

#wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > span > input {
    width: 100%;
    height: 70px;
    border: 1px solid #DEDEDE;
    border-radius: 0;
    background-color: transparent;
    padding-top: 0;
    padding-bottom: 0;
    font-weight: bold;
    font-size: 30px;
}

.price_donate_suggested_currency {
    display: inline-block;
    margin-left: 10px !important;
    margin-top: 22px !important;
    font-size: 14px !important;
    line-height: 25px !important;
    pointer-events: none;
}

.active .price_donate_suggested_currency {
    color: #E36F1E !important;
}

.container #wsd_checkout_form .active .price_donate_suggested_currency::before,
#wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > div.active > div > span.input-group-addon:last-of-type::before {
    border: 2px solid #E36F1E;
    content: "\e013";
}

.container #wsd_checkout_form .price_donate_suggested_currency::before,
#wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > div > div > span.input-group-addon:last-of-type::before {
    content: "";
    display: inline-block;
    line-height: 20px;
    margin-left: 10px;
    margin-right: 8px;
    width: 24px;
    height: 24px;
    border: 2px solid #DEDEDE;
    border-radius: 12px;
    pointer-events: none;
    vertical-align: top;
    overflow: clip;
    background-position: center;
    font-size: 12px;
    font-family: 'Glyphicons Halflings'
}

#wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > span > input:focus,
#wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > span.active > input{
    width: 100%;
    color: #E36F1E;
    background-color: #FDF7F3;
    border: 1px solid #E36F1E;
    border-radius: 0;
    outline: 0;
}

div.form-group.price_donate {
    border: 1px solid #DEDEDE;
    width: 100%;
}

div.form-group.price_donate label {
    display: none;
}

#wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > div > div {
    display: flex;
}

#wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > div > div,
#wsd_checkout_form #price_donate {
    width: 100% !important;
    border: 0;
    padding-top: 0 !important;
    padding-bottom: 0 !important;
}

#wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > div > div > span {
    border: 0;
    background-color: white;
    border-radius: 0;
}

#wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > div > div > span.input-group-addon:first-of-type {
    display: none;
}

#wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > div > div > span.input-group-addon:last-of-type {
    order: -1;
    font-size: 14px;
    line-height: 30px;
    min-width: 90px;
}

#wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > div.active {
    background-color: #FDF7F3;
    border: 1px solid #E36F1E !important;
}

#wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > div.active > div > span.input-group-addon:last-of-type,
#wsd_checkout_form .active #price_donate {
    color: #E36F1E;
    background-color: #FDF7F3;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.input-group-lg > .form-control,
.input-group-lg > .input-group-addon,
.input-group-lg > .input-group-btn > .btn {
    height: 70px !important;
}
/* ... */

